<resources>
    <string name="app_name" translatable="false">COVID19 Helper</string>
    <string name="btnNotifyCOVID19_string">Notify</string>
    <string name="btnEmergency_string">Call Emergency</string>
    <string name="txtVwSymptomTitle">Symptoms</string>
    <string name="txtVwMild">Mild</string>
    <string name="txtVwSevere">Severe</string>
    <string name="txtVwDoDontTitle">What to do and what not to do in quarantine?</string>
    <string name="txtVwDo">Do</string>
    <string name="txtVwDont">Do not</string>
    <string name="txtVwRoutesTitle">My Daily Routes</string>
    <string name="txtVwMediaTitle">Media</string>
    <string name="txtVwNewsTitle">News</string>
    <string name="txtVwFactsVsMythsTitle">Facts vs Myths</string>
    <string name="txtVwMyths">Myths</string>
    <string name="txtVwFacs">Facts</string>
    <string name="txtVwHowToStopTitle">How to Stop it?</string>
    <string name="txtVwLocalNews">Local News</string>
    <string name="txtVwGlobalNews">Global News</string>
    <string name="txtVwMoreNews">More...</string>
    <string name="txtVwNoticationsTitle">Notifications</string>
    <string name="txtActionNoImplemented">This action has not been implemented!</string>
    <string name="txtActionCallFoodBank">It looks like you didn\'t set up a phone number for this action!</string>
    <string name="txtImgMapHomePage">Your position regarding unsafe routes</string>
    <string name="txtImgChartHomePage">Local, National and Global cases of COVID19</string>
    <string name="txtImgAdviceHomePage">Random Advice</string>
    <string name="txtImgAlarmHomePage">Alarm</string>
    <string name="txtRecordingHomePage">Recording</string>
    <string name="txtStopRecordHomePage">Saved Audio File</string>
    <string name="txtPlayAudioHomePage">"Playing Audio File "</string>
    <string name="btnUpdateSymptom">Update My Symptoms</string>
    <string name="txtMSGDoNotForget">Do not forget to press the button to confirm your update.</string>
    <string name="btnUpdateHowToStop">Update my Actions</string>
    <string name="btnUpdateWhatToDo">Update What I am doing</string>
    <string name="txtMSGKeepPress">There is not enough data to save.\n Keep press and hold to record</string>
    <string name="txtMediaHistoryTitle">Audio File History</string>
    <string name="txtFact">Fact</string>
    <string name="txtMyth">Myth</string>
    <string name="txtFileDataName">FileData</string>
    <string name="txtShare">Share</string>
    <string name="txtViewTotalCase">Total Cases</string>
    <string name="txtViewTotalCaseY">Total Cases Yesterday</string>
    <string name="textViewActiveTitle">Active Cases</string>
    <string name="textViewActiveTitleY">Active Cases Yesterday</string>
    <string name="txtCountersInit" translatable="false">00000</string>
    <string name="textViewRecoveredTitle">Recovered</string>
    <string name="textViewRecoveredTitleY">Recovered Yesterday</string>
    <string name="textViewDeathsTitle">Deaths</string>
    <string name="textViewDeathsTitleY">Deaths Yesterday</string>
    <string name="textViewActive">Active</string>
    <string name="textViewNewCasesTitle">New Cases</string>
    <string name="textViewNewCasesTitleY">New Cases Yesterday</string>
    <string name="textViewNewDeathsTitle">New Deaths</string>
    <string name="textViewNewDeathsTitleY">New Deaths Yesterday</string>
    <string name="textCountriesHeader">Confirmed Cases by Country</string>
    <string name="textSearchBox">Search here by Country name</string>
    <string name="colCountryNameHEAD">Country</string>
    <string name="colCasesHEAD">Cases</string>
    <string name="colNewCasesHEAD">Cases Today</string>
    <string name="colRecoveredHEAD">Recovered</string>
    <string name="colNewDeathsHEAD">Deaths Today</string>
    <string name="textViewHEADSource">Source: www.worldometers.info/coronavirus</string>
    <string name="textViewSource">Source: </string>
    <string name="txtDeveloper">Developer</string>
    <string name="txtShareBody">Install (COVID19 Helper) Android Application to keep updated with the data  and tools to help yourself</string>
    <string name="txtBtnClosInf">Close</string>
    <string name="txtLocation">Location:</string>
    <string name="txtNone">None</string>
    <string name="txt1Hour">1 Hour</string>
    <string name="txt2Hour">2 Hour</string>
    <string name="txt3Hour">3 Hour</string>
    <string name="txt9_00H" translatable="false">9:00 PM</string>
    <string name="txt9_30H" translatable="false">9:30 PM</string>
    <string name="txt10_00H" translatable="false">10:00 PM</string>
    <string name="txt10_30H" translatable="false">10:30 PM</string>
    <string name="txt11_00H" translatable="false">11:00 PM</string>
    <string name="txt11_30H" translatable="false">11:30 PM</string>
    <string name="txtGarlicWater">Garlic Water</string>
    <string name="txtLimeWhater">Lime Water</string>
    <string name="txtHotTea">Hot Tea</string>
    <string name="txtDailyRecord">Daily Record</string>
    <string name="txtGeneralAdvice">General Advice</string>
    <string name="txtSettingsEmergencyTitle">EMERGENCY</string>
    <string name="txtSettingsAlarmsTitle">ALARMS</string>
    <string name="txtSettingsNotificationsTitle">NOTIFICATIONS</string>
    <string name="txtNotificationDailyRecord">Record your daily contacts</string>
    <string name="txtNotificationTeaTime">Time to drink hot Tea</string>
    <string name="txtNotificationGarleTime">Time to gargle with salt water</string>
    <string name="txtLastUpdate">Last updated: </string>
    <string name="txtNetworkError">Network Connection Error!</string>
    <string name="txtSttings">Settings</string>

    <string name="txtViewCasesPrefNow" translatable="false">txtViewCasesPrefNow</string>
    <string name="txtViewRecoveredPrefNow" translatable="false">txtViewRecoveredPrefNow</string>
    <string name="txtViewDeathsPrefNow" translatable="false">txtViewDeathsPrefNow</string>
    <string name="txtViewDatePrefNow" translatable="false">txtViewDatePrefNow</string>
    <string name="txtViewActivePrefNow" translatable="false">txtViewActivePrefNow</string>

    <string name="txtViewCasesPrefY" translatable="false">txtViewCasesPrefY</string>
    <string name="txtViewRecoveredPrefY" translatable="false">txtViewRecoveredPrefY</string>
    <string name="txtViewDeathsPrefY" translatable="false">txtViewDeathsPrefY</string>
    <string name="txtViewDatePrefY" translatable="false">txtViewDatePrefY</string>
    <string name="txtViewActivePrefY" translatable="false">txtViewActivePrefY</string>

    <string name="txtViewCasesPrefYC" translatable="false">txtViewCasesPrefYC</string>
    <string name="txtViewRecoveredPrefYC" translatable="false">txtViewRecoveredPrefYC</string>
    <string name="txtViewDeathsPrefYC" translatable="false">txtViewDeathsPrefYC</string>
    <string name="txtViewDatePrefYC" translatable="false">txtViewDatePrefYC</string>
    <string name="txtViewActivePrefYC" translatable="false">txtViewActivePrefYC</string>

    <string name="txtFragmentSelectedTitle" translatable="false">txtFragmentSelectedTitle</string>

    <string name="txtFragmentTitleNow">Now</string>
    <string name="txtFragmentTitleYesterday">Yesterday</string>
    <string name="txtFragmentTitleCountry">Selected Country</string>
    <string name="txtYourSelectedCountryState">State</string>
    <string name="txtYourSelectedCountryTableTitle">Confirmed Cases by State or Province</string>
</resources>
